--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: tshimoda <tshimoda@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/01/19 19:22:46 by tshimoda          #+#    #+#              #
-#    Updated: 2022/01/30 19:13:29 by tshimoda         ###   ########.fr        #
+#    Updated: 2022/02/03 10:20:30 by tshimoda         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -23,10 +23,12 @@ SDIR= sources
 ODIR= objects
 
 SRCS= main.c \
+		act.c \
 		init.c \
+		print.c \
 		queue.c \
-		time.c \
 		utils.c \
+		watch.c \
 
 OBJS= $(SRCS:.c=.o)
 
